   * Remove female^ descriptions of Outlaw, Footpad, Fugitive, Dark Adept
   * The term 'stoned' has been replaced with 'petrified'; also the
     related verb.
 * Multiplayer server:
   * Implemented automatic saving of game replays.
   * Implemented the adminmsg command to allow players to send messages to
     currently available admins. (FR #9218)
 * Savegames
   * Providing a new simpler interface for dealing with savegames
 * User interface:
   * Fixed bug #13257: Attack dialog always uses the active name of a weapon
     special
   * Fix missing faction column when waiting that the host start the game,
     plus some other unwanted changes there (bug #13243)
   * Make delayed shroud updates and scenarion objectives to change and 
     show information for viewing team. (help in bug #13313)
   * Making the game return to the add-on install dialog just before
     installing one, and with its entry selected
   * Implemented FR #13321: added "unit advances=N" command to debug console
     to immediately level-up selected unit N times
   * Improved the sorting of the XP and traits columns in the unit list dialog
     (part of bug #13360)
   * New console command ":discover" make the help considers that you
     discovered all the units of the current campaign/era
   * Debug action "Change unit side" allows to change owner of empty village
     and is now renamed "Change side".
   * Debug actions "Create unit" and "Change side" used on unit in a village
     now causes a capture of that village.
   * Rewrote the layout algoritm (still a work in progress)
   * Fixed an multi-character UTF-8 handling bug in the password textbox
   * Changed the tmessage dialog to be able to show four buttons
   * Add a "Factions" section in help. Only show current era's informations.
 * WML Engine:
   * Added [show_objectives] tag and allowed [show_if] tag in [objective]
     tags. (bug #13042)
   * Made moveto events set $x2,$y2 to the source hex. (bug #13140)